Add readme comments

--- a/meson.build
+++ b/meson.build
@@ -1,14 +1,16 @@
 project('gameengine', 'c',
-  version : '0.1',
+  version : '0.0.1',
   default_options : [
     'buildtype=debug',
     'warning_level=3',
-    'c_std=c17',
+    'c_std=c99',
     'b_sanitize=address',
     'b_lundef=false'
     ])
 
 executable('engine',
            'src/main.c',
-           dependencies : dependency('x11'),
-           install : true)
+           dependencies : [
+             dependency('x11'),
+             ],
+           install : false)
