--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "src/Obsidian"]
 	path = src/Obsidian
 	url = git@dullahan.lan:DarkEngine/Obsidian.git
+[submodule "src/Enigma"]
+	path = src/Enigma
+	url = git@dullahan.lan:DarkEngine/Enigma.git
