--- a/meson.build
+++ b/meson.build
@@ -16,32 +16,18 @@ add_project_arguments('-DE_DOUBLE_PRECISION', language: 'c')
 
 # Math dep
 cc = meson.get_compiler('c')
-m_dep = cc.find_library('m', required : false)
 
-#subdir('src/Obsidian')
-
-incl_dir =  [
-  include_directories('src/util/include')
-  ]
+subdir('src/enigma')
+subdir('src/obsidian')
 
 dark = executable(
   'dark',
 # Main Engine
     'src/main.c',
-# Utilities
-    'src/util/e_math.c',
-    'src/util/e_matrix_operations.c',
-    'src/util/e_path.c',
-    'src/util/e_text.c',
-    'src/util/e_mem_debug.c',
-    'src/util/e_types.c',
-    'src/util/e_noise.c',
-    'src/util/e_matrix_make.c',
-    'src/util/e_math.c',
   dependencies : [
     m_dep,
-    #libobsidian_dep,
+    libenigma_dep,
+    libobsidian_dep,
   ],
-  include_directories: incl_dir,
   install : false)
 
