Changed obsidian to phantom

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "src/enigma"]
 	path = src/enigma
 	url = git@dullahan.lan:DarkEngine/enigma.git
-[submodule "src/obsidian"]
-	path = src/obsidian
-	url = git@dullahan.lan:DarkEngine/obsidian.git
+[submodule "src/phantom"]
+	path = src/phantom
+	url = git@dullahan.lan:DarkEngine/phantom.git
