--- a/meson.build
+++ b/meson.build
@@ -9,7 +9,7 @@ project('DarkEngine', 'c',
     'b_lundef=false'
 ])
 
-# ARGS AS OPTIONS FOR UTIL
+# ARGS AS OPTIONS FOR ENIGMA
 add_project_arguments('-DE_DOUBLE_PRECISION', language: 'c')
 #add_project_arguments('-DE_MEM_DEBUG', language: 'c')
 #add_project_arguments('-DE_EXIT_CRASH', language: 'c')
@@ -18,7 +18,7 @@ add_project_arguments('-DE_DOUBLE_PRECISION', language: 'c')
 cc = meson.get_compiler('c')
 
 subdir('src/enigma')
-subdir('src/obsidian')
+subdir('src/phantom')
 
 dark = executable(
   'dark',
@@ -27,7 +27,7 @@ dark = executable(
   dependencies : [
     m_dep,
     libenigma_dep,
-    libobsidian_dep,
+    libphantom_dep,
   ],
   install : false)
 
