Make Display type a choice, not automatically detected

--- a/linux_wayland_native.ini
+++ b/linux_wayland_native.ini
@@ -1,12 +1,11 @@
 [binaries]
-c = 'x86_64-w64-mingw32-gcc'
-exe_wrapper = 'wine64'
+c = 'clang'
 
 [host_machine]
-system = 'windows'
+system = 'linux'
 cpu_family = 'x86_64'
 cpu = 'x86_64'
 endian = 'little'
 
 [properties]
-display = 'win32'
+display = 'wayland'
