--- a/meson.build
+++ b/meson.build
@@ -13,13 +13,15 @@ message('Host OS: ' + host_machine.system())
 add_global_arguments('-D_UNICODE', language : 'c')
 add_global_arguments('-municode', language : 'c')
 
+display = meson.get_external_property('display')
+message('Display System: ', display)
+
 # Platform settings
 # Windows
 if host_machine.system() == 'windows'
   add_project_arguments('-DDARK_PLATFORM_WINDOWS', language : 'c')
   add_project_arguments('-DENIGMA_PLATFORM_WINDOWS', language : 'c')
   add_project_arguments('-DPHANTOM_PLATFORM_WINDOWS', language : 'c')
-  add_project_arguments('-DPHANTOM_DISPLAY_WIN32', language : 'c')
 # Linux
 elif host_machine.system() == 'linux'
   add_project_arguments('-DDARK_PLATFORM_LINUX', language : 'c')
@@ -30,30 +32,27 @@ endif
 # Enigma Settings
 add_project_arguments('-DENIGMA_DOUBLE_PRECISION', language : 'c')
 add_project_arguments('-DENIGMA_EXIT_CRASH', language : 'c')
-#add_project_arguments('-DENIGMA_MEM_DEBUG', language : 'c')
+add_project_arguments('-DENIGMA_DEBUG_MEMORY', language : 'c')
 
 # Phantom Settings
 add_project_arguments('-DPHANTOM_DEBUG_VULKAN', language : 'c')
 # Phantom Display Settings
-dep_ncurses = dependency('ncurses', required : false)
-if host_machine.system() == 'linux'
-  dep_wayland = dependency('wayland-client', required : false)
-  dep_x11 = [
-    dependency('xcb', required : false),
-    dependency('xcb-image', required : false),
+if display == 'x11'
+  dep_display = [
+    dependency('xcb', required : true),
+    dependency('xcb-image', required : true),
     ]
-# X11
-  if dep_x11[0].found() and dep_x11[1].found()
-    add_project_arguments('-DPHANTOM_DISPLAY_X11', language : 'c')
-# Wayland
-  elif dep_wayland.found()
-    add_project_arguments('-DPHANTOM_DISPLAY_WAYLAND', language : 'c')
-# Ncurses
-  elif dep_ncurses.found()
-    add_project_arguments('-DPHANTOM_DISPLAY_NCURSES', language : 'c')
-  else
-    error('There must be at least one graphical back-end installed.')
-  endif
+  add_project_arguments('-DPHANTOM_DISPLAY_X11', language : 'c')
+elif display == 'wayland'
+  dep_display = dependency('wayland-client', required : true)
+  add_project_arguments('-DPHANTOM_DISPLAY_WAYLAND', language : 'c')
+elif display == 'win32'
+  add_project_arguments('-DPHANTOM_DISPLAY_WIN32', language : 'c')
+elif display == 'ncurses'
+  dep_display = dependency('ncurses', required : true)
+  add_project_arguments('-DPHANTOM_DISPLAY_NCURSES', language : 'c')
+else
+  error('There must be at least one graphical back-end installed.')
 endif
 
 subdir('src/enigma')
