Cross compatible build

--- a/windows_native.ini
+++ b/windows_native.ini
@@ -1,14 +1,14 @@
 [binaries]
-c = 'clang'
+c = 'clang-cl'
 
 [host_machine]
-system = 'linux'
+system = 'windows'
 cpu_family = 'x86_64'
 cpu = 'x86_64'
 endian = 'little'
 
 [built-in]
-c_args = ['-municode']
+c_args = ['-utf-8']
 
 [properties]
-display = 'x11'
+display = 'win32'
