--- a/.gitmodules
+++ b/.gitmodules
@@ -8,3 +8,8 @@
 	url = git@deltafortress.hopto.me:DarkEngine/phantom.git
 	branch = main
 	ignore = all
+[submodule "src/abyss"]
+	path = src/abyss
+	url = git@deltafortress.hopto.me:DarkEngine/abyss.git
+	branch = main
+	ignore = all
