--- a/meson.build
+++ b/meson.build
@@ -13,8 +13,6 @@ if get_option('b_sanitize') != 'none'
   add_global_arguments('-fno-omit-frame-pointer', language: 'c')
 endif
 
-library_buildtype = get_option('library_buildtype')
-
 message('Host OS:', host_machine.system())
 add_global_arguments('-D_UNICODE', language : 'c')
 add_global_arguments('-DUNICODE', language : 'c')
@@ -24,56 +22,45 @@ graphics = meson.get_external_property('graphics')
 message('Display System:', display)
 message('Graphics Backend:', graphics)
 
-# Platform settings
-# Windows
-if host_machine.system() == 'windows'
-  add_project_arguments('-DDARK_PLATFORM_WINDOWS', language : 'c')
-  add_project_arguments('-DENIGMA_PLATFORM_WINDOWS', language : 'c')
-  add_project_arguments('-DPHANTOM_PLATFORM_WINDOWS', language : 'c')
-# Linux
-elif host_machine.system() == 'linux'
-  add_project_arguments('-DDARK_PLATFORM_LINUX', language : 'c')
-  add_project_arguments('-DENIGMA_PLATFORM_LINUX', language : 'c')
-  add_project_arguments('-DPHANTOM_PLATFORM_LINUX', language : 'c')
-endif
-
 # Enigma Settings
 if get_option('math_double_precision').enabled()
   add_project_arguments('-DENIGMA_DOUBLE_PRECISION', language : 'c')
 endif
 if get_option('debug_crash_on_error')
-  add_project_arguments('-DENIGMA_EXIT_CRASH', language : 'c')
+  add_project_arguments('-DPLATINUM_EXIT_CRASH', language : 'c')
 endif
 if get_option('debug_memory')
-  add_project_arguments('-DENIGMA_DEBUG_MEMORY', language : 'c')
+  add_project_arguments('-DPLATINUM_DEBUG_MEMORY', language : 'c')
 endif
 
 # Phantom Settings
 if graphics == 'vulkan'
-  add_project_arguments('-DPHANTOM_BACKEND_VULKAN', language : 'c')
+  add_project_arguments('-DPLATINUM_BACKEND_VULKAN', language : 'c')
+  add_project_arguments('-DABYSS_BACKEND_VULKAN', language : 'c')
   dep_vulkan = dependency('vulkan', required : true)
 endif
 if get_option('debug_graphics')
-  add_project_arguments('-DPHANTOM_DEBUG_GRAPHICS', language : 'c')
+  add_project_arguments('-DPLATINUM_DEBUG_GRAPHICS', language : 'c')
 endif
 # Phantom Display Settings
 if display == 'x11'
   dep_display = dependency('xcb', required : true)
-  add_project_arguments('-DPHANTOM_DISPLAY_X11', language : 'c')
+  add_project_arguments('-DPLATINUM_DISPLAY_X11', language : 'c')
 elif display == 'wayland'
   dep_display = dependency('wayland-client', required : true)
-  add_project_arguments('-DPHANTOM_DISPLAY_WAYLAND', language : 'c')
+  add_project_arguments('-DPLATINUM_DISPLAY_WAYLAND', language : 'c')
 elif display == 'win32'
-  add_project_arguments('-DPHANTOM_DISPLAY_WIN32', language : 'c')
+  add_project_arguments('-DPLATINUM_DISPLAY_WIN32', language : 'c')
 elif display == 'ncurses'
   dep_display = dependency('ncurses', required : true)
-  add_project_arguments('-DPHANTOM_DISPLAY_NCURSES', language : 'c')
+  add_project_arguments('-DPLATINUM_DISPLAY_NCURSES', language : 'c')
 else
   error('There must be at least one graphical back-end installed.')
 endif
 
 subdir('src/enigma')
-subdir('src/phantom')
+subdir('src/platinum')
+subdir('src/abyss')
 
 dark_srcs = [
   'src/main.c',
@@ -82,8 +69,9 @@ dark_srcs = [
   ]
 
 dark_deps = [
+  dep_libabyss,
   dep_libenigma,
-  dep_libphantom,
+  dep_libplatinum,
   dependency('iniparser', required : true),
   ]
 
@@ -98,7 +86,7 @@ dark = executable(
 engine_conf = configuration_data()
 engine_conf.set('PROJECTNAME', meson.project_name())
 engine_conf.set('PROJECTVERSION', meson.project_version())
-engine_conf.set('SHADERPATH', join_paths(get_option('prefix'), phantom_shader_install_path))
+engine_conf.set('SHADERPATH', join_paths(get_option('prefix'), platinum_shader_install_path))
 engine_conf_path = 'share/DarkEngine'
 engine_conf_name = 'config.ini'
 
